demo/src/main/java/com/example/demo/error/custom/UnauthorizedException.java
package com.example.demo.error.custom;

public class UnauthorizedException extends RuntimeException {

    public UnauthorizedException(String message) {
        super(message);
    }
}
